[SYNCOPE-1781] Embracing Virtual Threads (#532)